--- a/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
@@ -156,3 +156,35 @@
         </div>
     </div>
 </div>
+
+@code
+{
+    private readonly int _length = 1;
+    private int _onboarding;
+
+    [CascadingParameter]
+    public PublicLayout MainLayout { get; set; } = default!;
+
+    [Inject]
+    public IJSRuntime JSRuntime { get; set; } = default!;
+
+    [Inject]
+    public NavigationManager Navigation { get; set; } = default!;
+
+    public StringNumber OnBoarding
+    {
+        get => _onboarding;
+        set => _onboarding = value.AsT1;
+    }
+
+    private async Task Toggle(string url)
+    {
+        if (!string.IsNullOrWhiteSpace(url)) await JSRuntime.InvokeVoidAsync("window.open", url);
+    }
+
+    public string? T(string key)
+    {
+        var content = MainLayout.T(key);
+        return content;
+    }
+}
