--- a/src/Dotnet9.Tools.Web/_Imports.razor
+++ b/src/Dotnet9.Tools.Web/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Masa.Blazor
+@using BlazorMarkdown
 @using Dotnet9.Tools
 @using Dotnet9.Tools.Web.Shared
