--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools.razor
@@ -12,14 +12,14 @@
         {
             <MCol key="@tool.Title" Cols=@tool.Flex>
                 <MCard>
-                    <MImage Src="@tool.Src" Class="white--text align-end" Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)" Height=150>
+                    <MImage Src="@tool.Cover" Class="white--text align-end" Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)" Height=150>
                         <MCardTitle>@tool.Title</MCardTitle>
                     </MImage>
 
                     <MCardActions>
                         <span class="tool-desc">@tool.Description</span>
                         <MSpacer></MSpacer>
-                        <a href="/ico">@T("ToolsGo")</a>
+                        <a href="@tool.Src">@T("ToolsGo")</a>
                     </MCardActions>
                 </MCard>
             </MCol>
@@ -41,22 +41,26 @@
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        _tools.Add(
-            new ToolInfo
-            {
-                Title = T("IcoToolTitle"),
-                Description = T("IcoToolDesc"),
-                Src = "https://img1.dotnet9.com/2022/02/cover_13.jpg",
-                Flex = 3
-            });
+        _tools.Add(new ToolInfo(T("IcoToolTitle"), T("IcoToolDesc"), "https://img1.dotnet9.com/2022/02/cover_13.jpg", "/ico"));
+        _tools.Add(new ToolInfo(T("TimestampToolTitle"), T("TimestampToolDesc"), "https://img1.dotnet9.com/2022/02/cover_17.jpeg", "/timestamp"));
     }
 
     class ToolInfo
     {
-        public string? Title { get; init; }
-        public string? Description { get; init; }
-        public string? Src { get; init; }
-        public int Flex { get; init; }
+        public ToolInfo(string? title, string? desc, string? cover, string? src, int flex = 3)
+        {
+            Title = title;
+            Description = desc;
+            Cover = cover;
+            Src = src;
+            Flex = flex;
+        }
+
+        public string? Title { get; }
+        public string? Description { get; }
+        public string? Cover { get; }
+        public string? Src { get; }
+        public int Flex { get; }
     }
 
 }
