--- a/src/Dotnet9.Tools.Web/Pages/Public/TimeTools/TimestampTool.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/TimeTools/TimestampTool.razor
@@ -40,7 +40,7 @@
 
 <MarkdownComponent
     LocalPostFilePath="wwwroot/2022/02/2022-02-27_03.md"
-    RemotePostUrl="https://dotnet9.com/?p=1715"
+    RemotePostUrl="https://dotnet9.com/1801"
     SourceCodeUrl="https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/TimeTools/TimestampTool.razor"/>
 
 @code
