--- a/src/Dotnet9.Tools.Web/App.razor
+++ b/src/Dotnet9.Tools.Web/App.razor
@@ -1,4 +1,5 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@using Dotnet9.Tools.Web.Shared.Public
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(PublicLayout)"/>
         <FocusOnNavigate RouteData="@routeData" Selector="h1"/>
