--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools/TimeTools/TimestampTool.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools/TimeTools/TimestampTool.razor
@@ -1,4 +1,5 @@
 ﻿@page "/timestamp"
+@using Dotnet9.Tools.Web.Shared.Public
 @layout PublicLayout
 
 <PageTitle>@T("TimestampToolTitle")</PageTitle>
@@ -90,7 +91,7 @@
             var point = new DateTime(1970, 1, 1);
             var time = date.Subtract(point);
 
-            return (long) (kind == TimestampKind.Seconds ? time.TotalSeconds : time.TotalMilliseconds);
+            return (long)(kind == TimestampKind.Seconds ? time.TotalSeconds : time.TotalMilliseconds);
         }
         catch
         {
