--- a/src/Dotnet9.Tools.Web/Shared/Public/PublicHeader.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/PublicHeader.razor
@@ -6,7 +6,7 @@
     <MTab Style="text-transform: none" Href="/">@T("Home")</MTab>
     <MTab Style="text-transform: none" Href="/tools">@T("Tools")</MTab>
     <MTab Style="text-transform: none" Href="/album">@T("Album")</MTab>
-    <MTab Style="text-transform: none" Href="/blog">@T("Blog")</MTab>
+    <MTab Style="text-transform: none" Href="/cat">@T("Blog")</MTab>
     <MTab Style="text-transform: none" Href="/about">@T("About")</MTab>
 </MTabs>
 
