--- a/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using Dotnet9.Tools.Web.Shared.Public
 @using BlazorComponent
 @layout PublicLayout
 
@@ -29,7 +30,7 @@
                      Color="black"
                      Height="64"
                      Class="text-20 px-6 mb-6 mx-6"
-                     Href="https://dotnet9.com">
+                     Href="/cat">
                 @T("GoToDotnet9Blog")
             </MButton>
             <MButton Dark
