--- a/src/Dotnet9.Tools.Web/Pages/Public/About.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/About.razor
@@ -1,5 +1,8 @@
 ﻿@page "/about"
 @using Dotnet9.Tools.Web.Shared.Public
+@layout DocLayout
+
+<PageTitle>@T("Dotnet9ToolsTitle") - @T("About")</PageTitle>
 
 <h3>@T("About")</h3>
 
