--- a/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
@@ -3,7 +3,7 @@
 @using BlazorComponent
 @layout PublicLayout
 
-<PageTitle>@T("Dotnet9ToolsTitle")</PageTitle>
+<PageTitle>@T("Dotnet9ToolsTitle") - @T("Home")</PageTitle>
 
 <MRow Class="banner" NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.Center">
     <MCol Align="@AlignTypes.Center" Lg="6" Md="6" Sm="12">
@@ -31,7 +31,7 @@
                      Height="64"
                      Class="text-20 px-6 mb-6 mx-6"
                      Href="/cat">
-                @T("GoToDotnet9Blog")
+                @T("GoToBlog")
             </MButton>
             <MButton Dark
                      Color="black"
