--- a/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Category.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Category.razor
@@ -1,7 +1,7 @@
 ﻿@page "/cat"
 @using Dotnet9.Tools.Web.Shared.Public
 @using Dotnet9.Tools.Web.Models
-@layout PublicLayout
+@layout DocLayout
 
 <CardItemList Title="@T("Category")" Items="_items"></CardItemList>
 
@@ -21,13 +21,13 @@
         return MainLayout?.T(key) ?? string.Empty;
     }
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        base.OnInitialized();
+        await base.OnInitializedAsync();
 
         if (string.IsNullOrWhiteSpace(Slug))
         {
-            _items = ConstDatas.CategoryNotTreeItems!.Select(x => new CardItem(x.Name, "No description", "doc/blog_contents/category.jpg", $"/cat?slug={x.Slug}")).ToList();
+            _items = ConstDatas.CategoryNotTreeItems!.Select(x => new CardItem(x.Name, "No description", "http://api.btstu.cn/sjbz/?lx=m_meizi", $"/cat?slug={x.Slug}")).ToList();
         }
         else
         {
