--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools/TimeTools/TimestampTool.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools/TimeTools/TimestampTool.razor
@@ -1,8 +1,8 @@
 ﻿@page "/timestamp"
 @using Dotnet9.Tools.Web.Shared.Public
-@layout PublicLayout
+@layout DocLayout
 
-<PageTitle>@T("TimestampToolTitle")</PageTitle>
+<PageTitle>@T("Dotnet9ToolsTitle") - @T("TimestampToolTitle")</PageTitle>
 
 <h2 style="margin-bottom: 10px; margin-top: 10px; text-align: center;">@T("TimestampToolDesc")</h2>
 
@@ -58,49 +58,51 @@
 
     private readonly List<TimestampItem> _items = new();
 
-    protected override Task OnInitializedAsync()
+    protected override async Task OnInitializedAsync()
     {
         _items.Add(new TimestampItem(T("TimestampToolKindSeconds"), TimestampKind.Seconds));
         _items.Add(new TimestampItem(T("TimestampToolKindMilliseconds"), TimestampKind.Milliseconds));
         _currentDatetime = DateTime.Now;
-        _timestamp1 = _timestamp2 = DateToTimestamp(_currentDatetime, TimestampKind.Seconds);
+        _timestamp1 = _timestamp2 = await DateToTimestamp(_currentDatetime, TimestampKind.Seconds);
         _datetime1 = _datetime2 = _currentDatetime.ToString("yyyy-MM-dd HH:mm:ss");
-        return base.OnInitializedAsync();
+        await base.OnInitializedAsync();
     }
 
-    private void Convert1()
+    private async Task Convert1()
     {
-        _datetime1 = TimestampToDate(_timestamp1, _kindValue1).ToString(_kindValue1 == TimestampKind.Seconds ? "yyyy-MM-dd HH:mm:ss" : "yyyy-MM-dd HH:mm:ss.fff");
+        _datetime1 = (await TimestampToDate(_timestamp1, _kindValue1)).ToString(_kindValue1 == TimestampKind.Seconds ? "yyyy-MM-dd HH:mm:ss" : "yyyy-MM-dd HH:mm:ss.fff");
     }
 
-    private void Convert2()
+    private async Task Convert2()
     {
         try
         {
-            _timestamp2 = DateToTimestamp(DateTime.Parse(_datetime2), _kindValue2);
+            _timestamp2 = await DateToTimestamp(DateTime.Parse(_datetime2), _kindValue2);
         }
         catch
         {
+    // ignored
         }
     }
 
-    private static long DateToTimestamp(DateTime date, TimestampKind kind)
+    private static async Task<long> DateToTimestamp(DateTime date, TimestampKind kind)
     {
         try
         {
             var point = new DateTime(1970, 1, 1);
             var time = date.Subtract(point);
 
-            return (long)(kind == TimestampKind.Seconds ? time.TotalSeconds : time.TotalMilliseconds);
+            return (long) (kind == TimestampKind.Seconds ? time.TotalSeconds : time.TotalMilliseconds);
         }
         catch
         {
+            await Task.CompletedTask;
             return default;
         }
     }
 
 
-    private static DateTime TimestampToDate(long timestamp, TimestampKind kind)
+    private static async Task<DateTime> TimestampToDate(long timestamp, TimestampKind kind)
     {
         try
         {
@@ -111,6 +113,7 @@
         }
         catch
         {
+            await Task.CompletedTask;
             return default;
         }
     }
