--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools/ToolIndex.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools/ToolIndex.razor
@@ -1,7 +1,7 @@
 ﻿@page "/tools"
 @using Dotnet9.Tools.Web.Models
 @using Dotnet9.Tools.Web.Shared.Public
-@layout PublicLayout
+@layout DocLayout
 
 <CardItemList Title="@T("Dotnet9ToolsTitle")" Items="_tools"/>
 
@@ -17,12 +17,12 @@
         return MainLayout?.T(key) ?? string.Empty;
     }
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        base.OnInitialized();
-
         _tools.Add(new CardItem(T("IcoToolTitle"), T("IcoToolDesc"), "doc/blog_contents/uploads/2022/02/cover_13.jpg", "/ico"));
         _tools.Add(new CardItem(T("TimestampToolTitle"), T("TimestampToolDesc"), "doc/blog_contents/uploads/2022/02/cover_17.jpeg", "/timestamp"));
+
+        await base.OnInitializedAsync();
     }
 
 }
