--- a/src/Dotnet9.Tools.Web/Shared/Public/CardItemList.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/CardItemList.razor
@@ -1,35 +1,29 @@
-﻿@using BlazorComponent.I18n
-@using Dotnet9.Tools.Web.Models
-@layout PublicLayout
-@inject I18n I18N
+﻿@using Dotnet9.Tools.Web.Models
+@layout DocLayout
 
-<PageTitle>@Title</PageTitle>
+<PageTitle>@T("Dotnet9ToolsTitle") - @Title</PageTitle>
 
-<MCard>
-
-    <MRow>
-        @if (Items != null)
+<MRow>
+    @if (Items != null)
+    {
+        @foreach (var tool in Items)
         {
-            @foreach (var tool in Items)
-            {
-                <MCol key="@tool.Title" Class="col-xl-3 col-lg-4 col-sm-6 col-12 text-truncate">
-                    <MCard>
-                        <MImage Src="@tool.Cover" Class="white--text align-end" Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)" Height=150>
-                            <MCardTitle>@tool.Title</MCardTitle>
-                        </MImage>
+            <MCol key="@tool.Title" Class="col-xl-3 col-lg-4 col-sm-6 col-12 text-truncate">
+                <MCard>
+                    <MImage Src="@tool.Cover" Class="white--text align-end" Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)" Height=150>
+                        <MCardTitle>@tool.Title</MCardTitle>
+                    </MImage>
 
-                        <MCardActions>
-                            <span class="tool-desc">@tool.Description</span>
-                            <MSpacer></MSpacer>
-                            <a href="@tool.Url">@T("ToolsGo")</a>
-                        </MCardActions>
-                    </MCard>
-                </MCol>
-            }
+                    <MCardActions>
+                        <span class="tool-desc">@tool.Description</span>
+                        <MSpacer></MSpacer>
+                        <a href="@tool.Url">@T("ToolsGo")</a>
+                    </MCardActions>
+                </MCard>
+            </MCol>
         }
-    </MRow>
-
-</MCard>
+    }
+</MRow>
 
 @code
 {
